refactor(code): code changes after SonarQube analisis
Add Sonarqube plugin